fixed formatting, added answer to question 4

--- a/HW-W8D1-TypeScript.ipynb
+++ b/HW-W8D1-TypeScript.ipynb
@@ -7,20 +7,26 @@
    "source": [
     "<a id=\"hw\"></a>\n",
     "\n",
-    "# Homework\n",
-    "\n",
+    "# Homework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "434064b1",
+   "metadata": {},
+   "source": [
     "#### Question #1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbda3a5f",
+   "execution_count": 7,
+   "id": "3efc4ff0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "Create a type to represent the following instances of CTStudent Also declare three 3 students below as type CTStudent and set their values\n",
+    "// Create a type to represent the following instances of CTStudent Also declare \n",
+    "// three 3 students below as type CTStudent and set their values\n",
     "\n",
     "let student1 = {\n",
     "    id: 'GMK435&g62L00',\n",
@@ -46,228 +52,310 @@
     "    isTired: true,\n",
     "    projectsCompleted:[\"Matrix\",\"Biological Interface Program\"],\n",
     "    pet:'cat'\n",
-    "}\n",
-    "student3\n",
-    "1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f58226f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  id: \u001b[32m'GMK435&g62L00'\u001b[39m,\n",
+      "  name: \u001b[32m'John Smith'\u001b[39m,\n",
+      "  age: \u001b[33m24\u001b[39m,\n",
+      "  isTired: \u001b[33mtrue\u001b[39m,\n",
+      "  projectsCompleted: [\n",
+      "    \u001b[32m'HTML Portfolio'\u001b[39m,\n",
+      "    \u001b[32m'Fakebook'\u001b[39m,\n",
+      "    \u001b[32m'Pokemon API Project'\u001b[39m,\n",
+      "    \u001b[32m'Weather Bug'\u001b[39m\n",
+      "  ],\n",
+      "  pet: \u001b[32m'dog'\u001b[39m\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[32m'6KGS%54GmlY76'\u001b[39m,\n",
+      "  name: \u001b[32m'Jenny Hawthorne'\u001b[39m,\n",
+      "  age: \u001b[33m28\u001b[39m,\n",
+      "  isTired: \u001b[33mfalse\u001b[39m,\n",
+      "  projectsCompleted: [ \u001b[32m'HTML Portfolio'\u001b[39m ]\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[32m'6KGS%54GmlY76'\u001b[39m,\n",
+      "  name: \u001b[32m'Neo'\u001b[39m,\n",
+      "  age: \u001b[33m57\u001b[39m,\n",
+      "  isTired: \u001b[33mtrue\u001b[39m,\n",
+      "  projectsCompleted: [ \u001b[32m'Matrix'\u001b[39m, \u001b[32m'Biological Interface Program'\u001b[39m ],\n",
+      "  pet: \u001b[32m'cat'\u001b[39m\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
     "//Answer\n",
-    "2\n",
-    "​\n",
-    "3\n",
+    "\n",
     "type CTStudent = {\n",
-    "4\n",
     "    id: string,\n",
-    "5\n",
     "    name: string,\n",
-    "6\n",
     "    age: number,\n",
-    "7\n",
     "    isTired: boolean,\n",
-    "8\n",
     "    projectsCompleted: string[],\n",
-    "9\n",
     "    pet?: string\n",
-    "10\n",
     "}\n",
-    "11\n",
-    "​\n",
-    "12\n",
+    "\n",
     "let student1: CTStudent = {\n",
-    "13\n",
     "    id: 'GMK435&g62L00',\n",
-    "14\n",
     "    name: 'John Smith',\n",
-    "15\n",
     "    age: 24,\n",
-    "16\n",
     "    isTired: true,\n",
-    "17\n",
     "    projectsCompleted:[\"HTML Portfolio\", \"Fakebook\", \"Pokemon API Project\", \"Weather Bug\"],\n",
-    "18\n",
     "    pet: 'dog'\n",
-    "19\n",
     "}\n",
-    "20\n",
-    "​\n",
-    "21\n",
+    "\n",
     "let student2: CTStudent = {\n",
-    "22\n",
     "    id: '6KGS%54GmlY76',\n",
-    "23\n",
     "    name: 'Jenny Hawthorne',\n",
-    "24\n",
     "    age: 28,\n",
-    "25\n",
     "    isTired: false,\n",
-    "26\n",
     "    projectsCompleted:[\"HTML Portfolio\"],\n",
-    "27\n",
     "}\n",
-    "28\n",
-    "​\n",
-    "29\n",
+    "\n",
     "let student3: CTStudent = {\n",
-    "30\n",
     "    id: '6KGS%54GmlY76',\n",
-    "31\n",
     "    name: 'Neo',\n",
-    "32\n",
     "    age: 57,\n",
-    "33\n",
     "    isTired: true,\n",
-    "34\n",
     "    projectsCompleted:[\"Matrix\",\"Biological Interface Program\"],\n",
-    "35\n",
     "    pet:'cat'\n",
-    "36\n",
     "}\n",
-    "37\n",
-    "​\n",
-    "38\n",
+    "\n",
     "console.log(student1)\n",
-    "39\n",
     "console.log(student2)\n",
-    "40\n",
-    "console.log(student3)\n",
-    "{\n",
-    "  id: 'GMK435&g62L00',\n",
-    "  name: 'John Smith',\n",
-    "  age: 24,\n",
-    "  isTired: true,\n",
-    "  projectsCompleted: [\n",
-    "    'HTML Portfolio',\n",
-    "    'Fakebook',\n",
-    "    'Pokemon API Project',\n",
-    "    'Weather Bug'\n",
-    "  ],\n",
-    "  pet: 'dog'\n",
-    "}\n",
-    "{\n",
-    "  id: '6KGS%54GmlY76',\n",
-    "  name: 'Jenny Hawthorne',\n",
-    "  age: 28,\n",
-    "  isTired: false,\n",
-    "  projectsCompleted: [ 'HTML Portfolio' ]\n",
-    "}\n",
-    "{\n",
-    "  id: '6KGS%54GmlY76',\n",
-    "  name: 'Neo',\n",
-    "  age: 57,\n",
-    "  isTired: true,\n",
-    "  projectsCompleted: [ 'Matrix', 'Biological Interface Program' ],\n",
-    "  pet: 'cat'\n",
-    "}\n",
-    "Question #2\n",
-    "Write a function that will accept an object of type Fruit, the object of type Fruit could also be null. If their is a Fruit print the color of the fruit, otherwise print You ate my fruit already. Be sure to annotate the return type of the function.\n",
-    "\n",
-    "isItFruit(eaten)\n",
-    "1\n",
+    "console.log(student3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f90969",
+   "metadata": {},
+   "source": [
+    "#### Question #2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd85c820",
+   "metadata": {},
+   "source": [
+    "Write a function that will accept an object of type `Fruit`, the object of type Fruit could also be `null`.  If their is a Fruit print the color of the fruit, otherwise print `You ate my fruit already`. Be sure to annotate the return type of the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "af7af9c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You ate my fruit already\n"
+     ]
+    }
+   ],
+   "source": [
     "//Given\n",
-    "2\n",
     "type Fruit={\n",
-    "3\n",
     "    color:string,\n",
-    "4\n",
     "    shape:string\n",
-    "5\n",
     "}\n",
-    "6\n",
-    "​\n",
-    "7\n",
+    "\n",
     "let apple:Fruit={color:\"red\", shape:\"sphere\"}\n",
-    "8\n",
     "let eaten:Fruit=null\n",
-    "9\n",
-    "​\n",
-    "10\n",
+    "\n",
     "//Answer\n",
-    "11\n",
     "function isItFruit(myFruit: Fruit | null): string {\n",
-    "12\n",
     "    if (myFruit) {\n",
-    "13\n",
     "        return myFruit.color\n",
-    "14\n",
     "    } else {\n",
-    "15\n",
     "        return 'You ate my fruit already'\n",
-    "16\n",
     "    }\n",
-    "17\n",
     "}\n",
-    "18\n",
-    "​\n",
-    "19\n",
+    "\n",
     "isItFruit(apple)\n",
-    "20\n",
-    "isItFruit(eaten)\n",
-    "red\n",
-    "Question #3\n",
-    "Create a Union Type named Ebook for Book and DigitalBook and create one instance of the new union type\n",
-    "\n",
-    "bookOne\n",
-    "1\n",
+    "isItFruit(eaten)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a413570d",
+   "metadata": {},
+   "source": [
+    "#### Question #3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca8a453c",
+   "metadata": {},
+   "source": [
+    "Create a Union Type named `Ebook` for `Book` and `DigitalBook` and create one instance of the new union type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4089f1af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  isbn: \u001b[32m'458-542-89-456'\u001b[39m,\n",
+      "  title: \u001b[32m'Finding Fish'\u001b[39m,\n",
+      "  author: \u001b[32m'Antwone Quenton Fisher'\u001b[39m,\n",
+      "  fileType: \u001b[32m'kindle'\u001b[39m\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
     "//Given \n",
-    "2\n",
     "type Book={\n",
-    "3\n",
     "    isbn:string,\n",
-    "4\n",
     "    title:string,\n",
-    "5\n",
     "    author:string\n",
-    "6\n",
     "}\n",
-    "7\n",
-    "​\n",
-    "8\n",
-    "type DigitalBook={\n",
-    "9\n",
-    "    fileType:string,\n",
-    "10\n",
-    "}\n",
-    "11\n",
-    "​\n",
-    "12\n",
-    "//Answer\n",
-    "13\n",
-    "type Ebook = Book & DigitalBook\n",
-    "14\n",
-    "​\n",
-    "15\n",
-    "let bookOne: Ebook = {\n",
-    "16\n",
-    "    isbn: '458-542-89-456',\n",
-    "17\n",
-    "    title: 'Finding Fish',\n",
-    "18\n",
-    "    author: 'Antwone Quenton Fisher',\n",
-    "19\n",
-    "    fileType: 'kindle'\n",
-    "20\n",
-    "}\n",
-    "21\n",
-    "​\n",
-    "22\n",
-    "console.log(bookOne)\n",
-    "{\n",
-    "  isbn: '458-542-89-456',\n",
-    "  title: 'Finding Fish',\n",
-    "  author: 'Antwone Quenton Fisher',\n",
-    "  fileType: 'kindle'\n",
-    "}\n",
-    "Question #4\n",
-    "Create a Type to represent a ShopItem that will fit the following rules. You may need to create additional structures\n",
     "\n",
-    "All ShopItems have an numeric id that can not be edited\n",
-    "All ShopItems have a price\n",
-    "All ShopItems have a description\n",
-    "Some ShopItems have a color\n",
-    "All ShopItems have a Category represented with an enum\n",
-    "Possible Categories are Shirts Shoes Pants Hats\n",
-    "All ShopItems have a list of keywords used to help search for the ShopItem\n",
-    "For Example A Ironman Tshirt may have keywords = [\"Marvel\", \"Endgame\", \"Ironman\",\"Character Tees\", \"Tony Stark\"]\n",
-    "After Creating the ShopItem type create 3 items using this type\n",
-    "\n"
+    "type DigitalBook={\n",
+    "    fileType:string,\n",
+    "}\n",
+    "\n",
+    "//Answer\n",
+    "type Ebook = Book & DigitalBook\n",
+    "\n",
+    "let bookOne: Ebook = {\n",
+    "    isbn: '458-542-89-456',\n",
+    "    title: 'Finding Fish',\n",
+    "    author: 'Antwone Quenton Fisher',\n",
+    "    fileType: 'kindle'\n",
+    "}\n",
+    "\n",
+    "console.log(bookOne)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e802c165",
+   "metadata": {},
+   "source": [
+    "#### Question #4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044bfc91",
+   "metadata": {},
+   "source": [
+    "Create a Type to represent a `ShopItem` that will fit the following rules. You may need to create additional structures\n",
+    "\n",
+    "- All ShopItems have an numeric id that can not be edited \n",
+    "- All ShopItems have a price\n",
+    "- All ShopItems have a description\n",
+    "- Some ShopItems have a color\n",
+    "- All ShopItems have a Category represented with an enum \n",
+    "    - Possible Categories are `Shirts` `Shoes` `Pants` `Hats`\n",
+    "- All ShopItems have a list of keywords used to help search for the ShopItem \n",
+    "    - For Example A Ironman Tshirt may have keywords = [\"Marvel\", \"Endgame\", \"Ironman\",\"Character Tees\", \"Tony Stark\"]\n",
+    "\n",
+    "After Creating the `ShopItem` type create 3 items using this type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2898ec36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  id: \u001b[33m1298\u001b[39m,\n",
+      "  price: \u001b[33m12.99\u001b[39m,\n",
+      "  description: \u001b[32m'Wide hat'\u001b[39m,\n",
+      "  color: \u001b[32m'pink'\u001b[39m,\n",
+      "  category: \u001b[33m3\u001b[39m,\n",
+      "  keywords: [ \u001b[32m'wide'\u001b[39m, \u001b[32m'Mexican'\u001b[39m, \u001b[32m'brim'\u001b[39m ]\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[33m9780\u001b[39m,\n",
+      "  price: \u001b[33m120.99\u001b[39m,\n",
+      "  description: \u001b[32m'Running shoes'\u001b[39m,\n",
+      "  color: \u001b[32m'blue and gold'\u001b[39m,\n",
+      "  category: \u001b[33m1\u001b[39m,\n",
+      "  keywords: [ \u001b[32m'running'\u001b[39m, \u001b[32m'support'\u001b[39m, \u001b[32m'brooks'\u001b[39m, \u001b[32m'blue'\u001b[39m ]\n",
+      "}\n",
+      "{\n",
+      "  id: \u001b[33m9870\u001b[39m,\n",
+      "  price: \u001b[33m89.99\u001b[39m,\n",
+      "  description: \u001b[32m'Denim pants'\u001b[39m,\n",
+      "  category: \u001b[33m2\u001b[39m,\n",
+      "  keywords: [ \u001b[32m'jeans'\u001b[39m, \u001b[32m'pants'\u001b[39m, \u001b[32m'Levi'\u001b[39m ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "enum Category {Shirts, Shoes, Pants, Hats}\n",
+    "\n",
+    "type ShopItem = {\n",
+    "    readonly id: number,\n",
+    "    price: number,\n",
+    "    description: string,\n",
+    "    color?: string,\n",
+    "    category: Category,\n",
+    "    keywords: string[]\n",
+    "}\n",
+    "\n",
+    "let sombrero: ShopItem = {\n",
+    "    id: 1298,\n",
+    "    price: 12.99,\n",
+    "    description: 'Wide hat',\n",
+    "    color: 'pink',\n",
+    "    category: Category.Hats,\n",
+    "    keywords: ['wide', 'Mexican', 'brim']\n",
+    "}\n",
+    "\n",
+    "let brooksAdrenaline: ShopItem = {\n",
+    "    id: 9780,\n",
+    "    price: 120.99,\n",
+    "    description: 'Running shoes',\n",
+    "    color: 'blue and gold',\n",
+    "    category: Category.Shoes,\n",
+    "    keywords: ['running', 'support', 'brooks', 'blue']\n",
+    "}\n",
+    "\n",
+    "let jeansLevi: ShopItem = {\n",
+    "    id: 9870,\n",
+    "    price: 89.99,\n",
+    "    description: 'Denim pants',\n",
+    "    category: Category.Pants,\n",
+    "    keywords: ['jeans', 'pants', 'Levi']\n",
+    "}\n",
+    "\n",
+    "console.log(sombrero)\n",
+    "console.log(brooksAdrenaline)\n",
+    "console.log(jeansLevi)"
    ]
   }
  ],
